# proust

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  FRAMEWORK_README.md  LICENSE  Makefile  README.md  SETUP_FROM_URL.md  TEMPLATE_GUIDE.md  pyproject.toml
.context/: external_docs.yml  universal_claude.md
.context/backend/: backend.yml  frontend.yml
.context/commands/simone/: analyze_codebase.md  brainstorm.md  do_todo.md  reflect_on_solution.md
.examples/: README.md  brand_example.yml  ethos_example.md  guardrails_example.yml  manifesto_example.yml  universal_claude_example.md
.github/workflows/: publish.yml  test.yml
docs/: README.md  audit-super-prompt.md  claude-integration.md  command-execution.md  git-workflow.md  status-values.md
src/.proust/: brand.yml  ethos.md  external_docs.yml  guardrails.yml  universal_claude.md
src/.proust/commands/: README.md
src/.proust/commands/analysis/: README.md  codebase_review.md  discuss_review.md  project_review.md  testing_review.md
src/.proust/commands/core/: README.md  context_management.md  init.md  initialize.md  initialize_new_project.md
src/.proust/commands/meta/: README.md  consistency_audit.md  reflect_on_solution.md  self_assessment.md
src/.proust/commands/planning/: README.md  create_general_task.md  create_milestone.md  create_sprint_tasks.md  create_sprints_from_milestone.md
src/.proust/commands/simone/: analyze_codebase.md  brainstorm.md  code_review.md  commit.md  consistency_audit.md  context_management.md  create_general_task.md  create_sprint_tasks.md  create_sprints_from_milestone.md  discuss_review.md  do_task.md  gh_do_issues.md  initialize.md  initialize_new_project.md  prime.md  project_review.md  reflect_on_solution.md  test.md  testing_review.md  yolo.md
src/.proust/commands/workflow/: README.md  brainstorm.md  code_review.md  commit.md  do_task.md  gh_do_issues.md  prime.md  test.md  yolo.md
src/.proust/core/: architecture.yml  brand.yml  ethos.md  external_docs.yml  guardrails.yml
src/.proust/manifesto/: manifesto.yml
src/.proust/project/: manifest.yml
src/.proust/project/_templates/: adr_template.md  milestone_meta_template.md  project_manifest_template.md  sprint_meta_template.md  task_template.md
src/.proust/project/decisions/: CLAUDE.md
src/.proust/project/milestones/: CLAUDE.md
src/.proust/project/sprints/: CLAUDE.md
src/.proust/project/tasks/: CLAUDE.md
src/.proust/workspace/: README.md
src/.proust/workspace/assessments/: .gitkeep
src/.proust/workspace/context/: .gitkeep
src/.proust/workspace/reviews/: .gitkeep
src/.simone/: 00_PROJECT_MANIFEST.md  README.md
src/.simone/02_REQUIREMENTS/M01_Backend_Setup/: M01_milestone_meta.md
src/.simone/03_SPRINTS/: CLAUDE.MD
src/.simone/99_TEMPLATES/: milestone_meta_template.md  project_manifest_template.md
src/proust/: __init__.py  cli.py  core.py  installer.py
src/self-audit/: prompt.md
templates/: README.md
templates/examples/: README.md
templates/examples/fake_project/core/: brand.yml  ethos.md
templates/examples/fake_project/project/: manifest.yml
templates/examples/webapp_project/core/: ethos.md
templates/examples/webapp_project/project/: manifest.yml
templates/starters/: README.md
templates/starters/minimal/core/: ethos.md
templates/starters/standard/core/: ethos.md
templates/starters/standard/project/: manifest.yml
tests/: README.md  __init__.py  conftest.py
