[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proust-framework"
dynamic = ["version"]
description = "AI Memory & Context Archivist - A framework for managing AI context and project memory"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["ai", "context", "memory", "framework", "project-management"]
authors = [
    {name = "Ren", email = "ren@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]

[project.urls]
Documentation = "https://github.com/renkasiyas/proust"
Issues = "https://github.com/renkasiyas/proust/issues"
Source = "https://github.com/renkasiyas/proust"

[project.scripts]
proust = "proust.cli:main"

[tool.hatch.version]
path = "src/proust/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/proust"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true